# GodotPP

./: CMakeLists.txt
cmake/: CLionFix.cmake
game/: project.godot
game/scenes/: game.tscn  network_test.gd  network_test.gd.uid  network_test.tscn  network_test.tscn117552028.tmp  network_test.tscn29666194.tmp  network_test_new.gd.uid
src/common/: network_protocol.h
src/godotpp/: CMakeLists.txt
src/godotpp/include/: network_manager.h
src/godotpp/src/: network_manager.cpp
src/server/: CMakeLists.txt
src/server/src/: main.cpp
